заканчивает разметку index начинает разметку catal

--- a/index.html
+++ b/index.html
@@ -93,15 +93,52 @@
         <h2 class="interest_text">заинтересовались?</h2>
         <p class="interest_description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц
           в Седоне</p>
-        <a href="catalog.html" class="interest_link">
-          <button class="interest_button" type="submit">поиск гастинницы в седоне</button>
-        </a>
-      </div>
-
-
+        <a href="catalog.html" class="interest_link"> Поиск гостиницы в седоне </a>
       </div>
     </main>
-
+    <footer>
+      <section class="follow">
+        <img class="bacghound-image__follow" src="/images/subscribe.jpg" alt="фотновое размытое изображение гор"
+          width="1200" height="415">
+        <h2 class="follow__text">подпишитесь на рассылку</h2>
+        <p class="follow__desscription">Только полезная информация и никакого спама, честное слово!</p>
+        <form class="email" action="https://echo.htmlacademy.ru/" method="post">
+          <p class="follow__email">
+            <label class="follow_email visually-hidden" for="email">Ваш e-mail</label>
+            <input type="email" placeholder="Ваш e-mail">
+          </p>
+          <button class="button__follow" type="submit">Подписаться</button>
+        </form>
+      </section>
+      <section class="social">
+        <ul class="social__list">
+          <li class="social__link__vk">
+            <a href="https://vk.com/htmlacademy" class="social_link__vk__vector ">
+              <span class="social__link__vk__text visually-hidden">Мы Вконтакте</span>
+            </a>
+          </li>
+          <li class="social__link__tg">
+            <a href="" class="social__link__tg__text">
+              <a href="https://t.me/htmlacademy" class="social_link__tg__vector ">
+                <span class="social__link__tg__text visually-hidden">Мы в Телеграм</span>
+              </a>
+          </li>
+          <li class="social__link__yotube">
+            <a href="https://www.youtube.com/user/htmlacademy" class="social_link__youtube__vector ">
+              <span class="social__link__youtube__text visually-hidden">Мы в Ютубе</span>
+            </a>
+          </li>
+        </ul>
+        <address class="footer__contacts">
+          <a href="tel:+78128121212">+7 (812)-12-12 </a>
+        </address>
+        <div class="htmlacademy-link">
+          <a href="https://htmlacademy.ru/" class="footer-htmlacademy-link">
+            <span class="footer__HTML-academy visually-hidden">HTML Academy</span>
+          </a>
+        </div>
+      </section>
+    </footer>
   </body>
 
 </html>
