исправляет замечания изображений, добавляет стили

--- a/catalog.html
+++ b/catalog.html
@@ -15,8 +15,7 @@
     <header class="main-header">
       <nav class="navigation">
         <a class="navigation-icon" href="index.html">
-          <img class="navigation-icon" src="/images/icons/logo.svg" alt="Иконка логотипа сдедоны" width="140"
-            height="70">
+          <img class="navigation-icon" src="images/icons/logo.svg" alt="Иконка логотипа седоны" width="140" height="70">
         </a>
         <ul class=navigation-text>
           <li class="navigation-text__item">
