--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <header class="main-header">
       <nav class="navigation">
         <a class="navigation-icon" href="index.html">
-          <img class="navigation-icon" src="/images/icons/logo.svg" alt="Иконка логотипа сдедоны" width="140"
-            height="70">
+          <img class="navigation-icon" src="images/icons/logo.svg" alt="Иконка логотипа седоны" width="140" height="70">
         </a>
         <ul class=navigation-text>
           <li class="navigation-text__item">
@@ -45,7 +44,7 @@
       </nav>
     </header>
     <main class="main-index">
-      <img class="main-index-welcome" src="/images/welcome.png" alt="добро пожаловать в седону">
+      <img class="main-index-welcome" src="images/welcome.svg" alt="добро пожаловать в седону" width="458" height="352">
       <section class="advantages">
         <h1 class="advantages__text">Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
         <p class="advantages__description">Рассмотрим причины, по которым Седона курче, чем Гранд-Каньон!</p>
@@ -55,7 +54,7 @@
             <h2 class="advatages_item__text__photo">Настоящий городок</h2>
             <p class="advantages_item__description advantages_item__description__photo">Седона - не аттракцион для
               туристов, там течет своя жизнь</p>
-            <img src="/images/photo-1-header-block.jpg" alt="вид на отель с развивающимися флагами" width="800"
+            <img src="images/photo-1-header-block.jpg" alt="вид на отель с развивающимися флагами" width="800"
               height="385">
           </li>
           <li class="advantages_item advantages_item__square">
@@ -71,7 +70,7 @@
             <p class="advantages_item__description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages_item advantages_item_photo">
-            <img src="/images/photo-2.jpg" alt="вид на мост дьявола" width="800" height="385">
+            <img src="images/photo-2-header-block.jpg" alt="вид на мост дьявола" width="800" height="385">
             <h2 class="advatages_item__text__photo">там есть мость дьявола</h2>
             <p class="advantages_item__description advantages_item__description__photo">Да, по нему можно пройти! Если
               вы осмелитесь, разумеется</p>
