Исправляет замечания Styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <header class="main-header">
       <nav class="navigation">
         <a class="navigation-icon" href="index.html">
-          <img class="navigation-icon" src="images/icons/logo.svg" alt="Иконка логотипа седоны" width="140" height="70">
+          <img class="navigation-icon" src="images/header-icons/logo.svg" alt="Иконка логотипа седоны" width="140"
+            height="70">
         </a>
         <ul class=navigation-text>
           <li class="navigation-text__item">
@@ -131,9 +132,10 @@
           </li>
         </ul>
         <address class="footer__contacts">
-          <a href="tel:+78128121212">+7 (812)-12-12 </a>
+          <a href="tel:+78128121212">+7 (812) 812-12-12</a>
         </address>
         <a href="https://htmlacademy.ru/" class="footer-htmlacademy-link">
+          <img src="images/icons-footer/HTML-Academy_logo.svg" alt="логотип HTML Academy">
           <span class="footer__HTML-academy visually-hidden">HTML Academy</span>
         </a>
       </section>
