:heavy_check_mark: Сборка #8

--- a/8/index.html
+++ b/8/index.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="fonts/ptsans-700.woff2">
-    <link rel="stylesheet" href="fonts/ptsans-400.woff2">
     <base href="https://htmlacademy-htmlcss.github.io/1966385-sedona-37/8/">
 </head>
 
@@ -46,14 +44,17 @@
       </nav>
     </header>
     <main class="main-index">
-      <img class="main-index-welcome" src="images/welcome.svg" alt="добро пожаловать в седону" width="458" height="352">
-      <section class="advantages">
+      <div class="main-index-welcome">
+        <img class="main-index-welcome-image" src="images/welcome.svg" alt="добро пожаловать в седону" width="458"
+          height="352">
         <h1 class="advantages__text">Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
         <p class="advantages__description">Рассмотрим причины, по которым Седона курче, чем Гранд-Каньон!</p>
+      </div>
+      <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advatages_list">
           <li class="advantages_item advantages_item_photo">
-            <h2 class="advatages_item__text__photo">Настоящий городок</h2>
+            <h2 class="advatages_item__text">Настоящий городок</h2>
             <p class="advantages_item__description advantages_item__description__photo">Седона - не аттракцион для
               туристов, там течет своя жизнь</p>
             <img src="images/photo-1-header-block.jpg" alt="вид на отель с развивающимися флагами" width="800"
@@ -73,14 +74,14 @@
           </li>
           <li class="advantages_item advantages_item_photo">
             <img src="images/photo-2-header-block.jpg" alt="вид на мост дьявола" width="800" height="385">
-            <h2 class="advatages_item__text__photo">там есть мость дьявола</h2>
+            <h2 class="aadvatages_item__text">там есть мость дьявола</h2>
             <p class="advantages_item__description advantages_item__description__photo">Да, по нему можно пройти! Если
               вы осмелитесь, разумеется</p>
           </li>
         </ul>
       </section>
       <section class="service">
-        <h2 class="service_text">приезжайте в седону отдохнуть в комфорте и уюте</h2>
+        <h2 class="service_text">Приезжайте в седону отдохнуть в комфорте и уюте</h2>
         <p class="service_description">Опытный персонал и качественное обслуживание!</p>
         <ul class="service_list">
           <li class="sevice_item">
