:heavy_check_mark: Сборка #8

--- a/8/catalog.html
+++ b/8/catalog.html
@@ -129,17 +129,17 @@
         </select>
         <ul class="icons">
           <li class="icons-list">
-            <button class="icons-button">
+            <button class="icons-button-table">
               <span class="icons-items visually-hidden">Таблица</span>
             </button>
           </li>
           <li class="icons-list">
-            <button class="icons-button">
+            <button class="icons-button-title">
               <span class="icons-items visually-hidden">Полный экран</span>
             </button>
           </li>
           <li class="icons-list">
-            <button class="icons-button">
+            <button class="icons-button-list">
               <span class="icons-items visually-hidden">Список</span>
             </button>
           </li>
