--- a/8/index.html
+++ b/8/index.html
@@ -47,10 +47,10 @@
       <div class="main-index-welcome">
         <img class="main-index-welcome-image" src="images/welcome.svg" alt="добро пожаловать в седону" width="458"
           height="352">
-        <h1 class="advantages__text">Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
-        <p class="advantages__description">Рассмотрим причины, по которым Седона курче, чем Гранд-Каньон!</p>
       </div>
       <section class="advantages">
+        <h1 class="advantages__text">Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
+        <p class="advantages__description">Рассмотрим причины, по которым Седона курче, чем Гранд-Каньон!</p>
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advatages_list">
           <li class="advantages_item advantages_item_photo">
@@ -74,7 +74,7 @@
           </li>
           <li class="advantages_item advantages_item_photo">
             <img src="images/photo-2-header-block.jpg" alt="вид на мост дьявола" width="800" height="385">
-            <h2 class="aadvatages_item__text">там есть мость дьявола</h2>
+            <h2 class="advatages_item__text">там есть мость дьявола</h2>
             <p class="advantages_item__description advantages_item__description__photo">Да, по нему можно пройти! Если
               вы осмелитесь, разумеется</p>
           </li>
@@ -86,15 +86,15 @@
         <ul class="service_list">
           <li class="sevice_item">
             <h3 class="service_item__text">Жилье</h3>
-            <p class="serviuce_item__description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <p class="service_item__description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="sevice_item service_item__food">
             <h3 class="service_item__text">Еда</h3>
-            <p class="serviuce_item__description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <p class="service_item__description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="sevice_item">
             <h3 class="service_item__text">Сувениры</h3>
-            <p class="serviuce_item__description">Не только китайского, но и настоящего местного производства!</p>
+            <p class="service_item__description">Не только китайского, но и настоящего местного производства!</p>
           </li>
         </ul>
       </section>
